--- a/styles.css
+++ b/styles.css
@@ -231,7 +231,7 @@ main {
     width: 300px;
     height: 300px;
     background-size: contain;
-    background-image: url(https://i.imgur.com/GJmiXOt.png);
+    background-image: url(https://i.imgur.com/Nd3fUMg.jpeg);
     background-color: var(--neon-purple-dark);
     border-radius: 50%;
     position: relative;
@@ -800,4 +800,5 @@ footer {
     pointer-events: none;
     z-index: -1;
     opacity: 0.6;
+
 }
